relative sizes and grid

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       <header>
         <h1>Sarah Dominguez Powell</h1>
       </header>
+      <nav>
+        <button>Home</button>
+        <button><a href=mailto:"hello@sarahdp.com">Email Me</a></button>
+        <button><a href="https://linkedin.com/in/sarahdp">LinkedIn</a></button>
+      </nav>
       <section>
         <h2>Education | UX Design Social | Impact</h2>
         <p>
@@ -29,16 +34,12 @@
           <li>JavaScript</li>
         </ul>
       </section>
-
-      <section>
-        <h2>Contact</h2>
-        <p>Email: hello@sarahdp.com</p>
-      </section>
-
-      <section id="projects">
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
+      
+      <h2>Projects</h2>
+      <section id="projects">  
+        <div class="project"> Trans Health Equity Work Group</div>
+        <div class="project">Digital Learning Evaluation</div>
+        <div class="project">Consent Education RPG</div>
       </section>
     </main>
     <footer>&copy;2023 Sarah Dominguez Powell</footer>
