--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sarah's Portfolio</title>
     <link rel="icon" type="image/x-icon" href="/assets/Favicon.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Urbanist&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="script.js" type="application/javascript" defer></script>
   </head>
@@ -35,12 +38,24 @@
         </ul>
       </section>
       
-      <h2>Projects</h2>
+      
       <section id="projects">  
-        <div class="project"> Trans Health Equity Work Group</div>
-        <div class="project">Digital Learning Evaluation</div>
-        <div class="project">Consent Education RPG</div>
+        <h2>Projects</h2>
+        <div class="project-container">
+        <div class="project"> 
+          <h3>Trans Health Equity Work Group</h3>
+          <p>Students and staff work together to improve the Student Health Center’s gender-affirming medical care. Conducted user research, usability testing, and prototyping.</p></div>
+        <div class="project">
+          <h3>Digital Learning Evaluation</h3>
+          <p>Evaluated asynchronous online course for learning standards, multimedia design principles, and youth friendliness. </p>
+        </div>
+        <div class="project">
+          <h3>Consent Education RPG</h3>
+          <p>Thesis project. Designing a digital role-playing game for high school students to practice consent and communication skills.</p>
+        </div>
+        </div>
       </section>
+
     </main>
     <footer>&copy;2023 Sarah Dominguez Powell</footer>
   </body>
