tiny syntax changes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </header>
       <nav>
         <button>Home</button>
-        <button><a href=mailto:"hello@sarahdp.com">Email Me</a></button>
+        <button><a href="mailto:hello@sarahdp.com">Email Me</a></button>
         <button><a href="https://linkedin.com/in/sarahdp">LinkedIn</a></button>
       </nav>
       <section>
@@ -69,8 +69,9 @@
         </button>
   
         <button class="right">
-          <img src="assets/right-arrow.png>">
+          <img src="assets/right-arrow.png">
         </button>
+
         </div>
 
       
